--- a/index.html
+++ b/index.html
@@ -2,124 +2,39 @@
     style="border-collapse: collapse;table-layout: fixed;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;"
     width="100%">
     <tr>
-        <td style="padding-right:15px;vertical-align:top;width:100px;">
-            <img src="https://drive.google.com/uc?export=view&id=1yw4GBtWXqTKA0K0hTojbavH8Ve3HGkTr"
-                alt="profile" style="display:block;height: 100px; width:100px;margin-top:10px;" nosend="1">
-        </td>
-        <td>
+       <td>
             <table>
+                <tr>
+                    <table style = "width: 371px; border-bottom: 2px solid black; border-color: #1beeee;">
+                        <tr>
+                            <td style = "font-family: Poppins, sans-serif;
+                            font-size: 34px;
+                            font-weight: 600;
+                            line-height: normal;">Jesus Macias Jr.</td>
+                        </tr>
+                        <tr>
+                            <td style = "font-family: Poppins, sans-serif;
+                            font-size: 20px;
+                            font-weight: 300;">Founder</td>
+                        </tr>
+                    </table>
+                </tr>
                 <tr>
                     <table>
                         <tr>
-                            <td>
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <span
-                                                style="font-family: 'Poppins', sans-serif;font-weight: 600;font-size: 18px;line-height: 20px;"> 
-                                                Em Furukawa</span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="font-family: 'Poppins', sans-serif;
-                                        font-style: bold;
-                                        font-weight: 600;
-                                        font-size: 10px;
-                                        line-height: 14px;">
-                                        Graphic Designer, <span style="font-family: 'Poppins',sans-serif;
-                                        font-weight: 400;
-                                        font-size: 10px;
-                                        line-height: 14px;">TwentyThree.Five</span></td>
-                                    </tr>
-                                </table>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img src="https://drive.google.com/uc?export=view&id=197q4GWtKAE3OLm9QE2mItZVsyYWQKUmx"
-                                    alt="line" style="display:block;" nosend="1">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <table>
-                                                <tr>
-                                                    <td style="font-family: 'Poppins',sans-serif;
-                                                    font-weight: 400;
-                                                    font-size: 10px;
-                                                    line-height: 16px;
-                                                    margin-right:25px;
-                                                    display:inline-flex;">
-                                                       <img src="https://drive.google.com/uc?export=view&id=1_OXYSukPp-779xb7aPSz-gz_Qu4WHQc-"
-                                                       alt="phone" nosend="1" style = "margin-right: 5px;">
-                                                       919.706.8329 
-                                                    </td>
-                                                    <td style="font-family: 'Poppins',sans-serif;
-                                                    font-weight: 400;
-                                                    font-size: 10px;
-                                                    line-height: 16px;
-                                                    display:inline-flex;">
-                                                        <img src="https://drive.google.com/uc?export=view&id=1dzJOjUCV9-iBgBeGDhAwGcBu8eDK5WHH" 
-                                                        alt="mail" nosend="1"style = "margin-right: 5px;">
-                                                        <a href="mailto:em.furukawa@twentythree5.com" style="font-family: 'Poppins',sans-serif;
-                                                        font-weight: 400;
-                                                        font-size: 10px;
-                                                        line-height: 16px;">em.furukawa@twentythree5.com</a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td style="font-family: 'Poppins',sans-serif;
-                                                    font-weight: 400;
-                                                    font-size: 10px;
-                                                    line-height: 16px;
-                                                    margin-right:25px;
-                                                    display:inline-flex;">
-                                                       <img src="https://drive.google.com/uc?export=view&id=1ZsJE1kkWPe0-nwCpSLBaaHF7Jr_JhvCl"
-                                                       alt="location" nosend="1"style = "margin-right: 5px;">                                       
-                                                        Salt Lake City, UT
-                                                    </td>
-                                                    <td
-                                                        style="padding-bottom:5px;display:inline-flex;">
-                                                        <img src="https://drive.google.com/uc?export=view&id=1SigsSuYbPxNqc1nTdKgf0Q92Lzci0UV3"
-                                                       alt="website" nosend="1"style = "margin-right: 5px;">
-                                                        <a href="https://www.twentythree5.com/" style="font-family: 'Poppins',sans-serif;
-                                                        font-weight: 400;
-                                                        font-size: 10px;
-                                                        line-height: 16px;">www.twentythree5.com</a>
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <span>
-                                                <a href="https://www.facebook.com/23.5Creative/" target="_blank"
-                                                    style="display: inline-block;height:28px;width:28px;">
-                                                    <img src="https://drive.google.com/uc?export=view&id=1NEy0Z037b4DU3cK5eGLxIz8ig6ZsQVN_"
-                                                    alt="facebook" nosend="1">                                                 
-                                                </a>&nbsp;&nbsp; </span>
-                                            <span>
-                                                <a href="https://www.linkedin.com/in/emfurukawa/" target="_blank" style="display: inline-block;height:28px;width:28px;">
-                                                    <img src="https://drive.google.com/uc?export=view&id=1Z10aq9Vo8Ke2aa9Nu7QC_ZcyYG13SqvQ" 
-                                                    alt="linkedin" nosend="1">                                                 
-                                                </a>&nbsp;&nbsp; </span>
-                                            <span>
-                                                <a href="https://www.instagram.com/23.5creative/?hl=en" target="_blank" style="display: inline-block;height:28px;width:28px;">
-                                                    <img src="https://drive.google.com/uc?export=view&id=1tEkN3MWp0af3SX1pdHEhuTjkOEY5GwWv"
-                                                       alt="instagram" nosend="1">                                             
-                                                </a>&nbsp;&nbsp; </span>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </td>
+                            <td style="font-family:'Poppins',sans-serif;
+                                    margin-right:25px;
+                                    display:inline-flex;">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                                <path d="M3.20833 5.04166L9.70364 11.537C10.4196 12.2529 11.5804 12.2529 12.2964 11.537L18.7917 5.04166M3.66667 17.4167H18.3333C18.8396 17.4167 19.25 17.0063 19.25 16.5V5.49999C19.25 4.99373 18.8396 4.58333 18.3333 4.58333H3.66667C3.16041 4.58333 2.75 4.99373 2.75 5.5V16.5C2.75 17.0063 3.16041 17.4167 3.66667 17.4167Z" stroke="#000807" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                              </svg>Zeus@trendytreats.com</td>
                         </tr>
                     </table>
                 </tr>
             </table>
-        </td>
+       </td>
+       <td>
+            <table></table>
+       </td>
     </tr>
 </table>
