--- a/index.html
+++ b/index.html
@@ -1,40 +1,22 @@
 <table cellspacing="0" cellpadding="0"
-    style="border-collapse: collapse;table-layout: fixed;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;"
+    style="border-collapse: collapse;table-layout: fixed;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;border:1px solid black;"
     width="100%">
     <tr>
        <td>
             <table>
                 <tr>
-                    <table style = "width: 371px; border-bottom: 2px solid black; border-color: #1beeee;">
+                    <table style = "border-bottom: 2px solid black;">
                         <tr>
-                            <td style = "font-family: Poppins, sans-serif;
-                            font-size: 34px;
-                            font-weight: 600;
-                            line-height: normal;">Jesus Macias Jr.</td>
+                            <span style="font-family: 'Poppins', sans-serif;font-weight: 600;font-size: 18px;line-height: 20px;"> Jesus Macias Jr.</span>
                         </tr>
                         <tr>
-                            <td style = "font-family: Poppins, sans-serif;
-                            font-size: 20px;
-                            font-weight: 300;">Founder</td>
-                        </tr>
-                    </table>
-                </tr>
-                <tr>
-                    <table>
-                        <tr>
-                            <td style="font-family:'Poppins',sans-serif;
-                                    margin-right:25px;
-                                    display:inline-flex;">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
-                                <path d="M3.20833 5.04166L9.70364 11.537C10.4196 12.2529 11.5804 12.2529 12.2964 11.537L18.7917 5.04166M3.66667 17.4167H18.3333C18.8396 17.4167 19.25 17.0063 19.25 16.5V5.49999C19.25 4.99373 18.8396 4.58333 18.3333 4.58333H3.66667C3.16041 4.58333 2.75 4.99373 2.75 5.5V16.5C2.75 17.0063 3.16041 17.4167 3.66667 17.4167Z" stroke="#000807" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                              </svg>Zeus@trendytreats.com</td>
+                            <td>
+                                <span style ="font-family:'Poppins',sans-serif;font-weight:400;font-size:12px;">Founder</span>
+                            </td>
                         </tr>
                     </table>
                 </tr>
             </table>
-       </td>
-       <td>
-            <table></table>
-       </td>
+         </td>
     </tr>
 </table>
