Working on the left side of the signature
Adding Name and contact info

--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <table cellspacing="0" cellpadding="0"
-    style="border-collapse: collapse;table-layout: fixed;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;border:1px solid black;"
-    width="100%">
+    style="border-collapse: collapse;table-layout: fixed;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;border:1px solid black;">
     <tr>
         <td>
             <table>
                 <tr>
-                    <td>hi</td>
+                    <td>
+                        <table style = "border-bottom: 2px solid black; border-color:#1beeee;">
+                            <tr>
+                                <td>
+                                    Jesus Macias Jr.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    Founder
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td>hello there</td>
                 </tr>
             </table>
         </td>
         <td>
             <table style = "border-left: 2px solid black; border-color:#1beeee;">
                     <tr>
-                        <td style = "padding-left:10px;">
+                        <td style = "padding-left:20px;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="96" height="70" viewBox="0 0 96 70" fill="none">
                                 <mask id="path-1-outside-1_7_110" maskUnits="userSpaceOnUse" x="0.576904" y="0" width="95" height="70" fill="black">
                                   <rect fill="white" x="0.576904" width="95" height="70"/>
@@ -45,7 +60,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="padding-left:10px;">
+                        <td style="padding-left:20px;">
                             <span>
                                 <a href="https://www.facebook.com/23.5Creative/" target="_blank" style="display: inline-block;height:25px;width:25px;">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
