Stylized the text, adjusted spacing

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
                     <td>
                         <table style = "border-bottom: 2px solid black; border-color:#1beeee; width:250px;">
                             <tr>
-                                <td>
-                                    Jesus Macias Jr.
+                                <td style="font-family:'Poppins',sans-serif; 
+                                            font-weight:600;
+                                            font-size:20px;
+                                            line-height:18px">
+                                            Jesus Macias Jr.
                                 </td>
                             </tr>
                             <tr>
-                                <td>
-                                    Founder
+                                <td style="font-family:'Poppins',sans-serif; 
+                                            font-weight:400;
+                                            font-size:12px;">
+                                            Founder
                                 </td>
                             </tr>
                         </table>
@@ -21,20 +26,20 @@
                 </tr>
                 <tr>
                     <td style="display:inline-flex;">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none" style="padding-right:10px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none" style="padding-right:10px; padding-left:5px;">
                             <path d="M2.47917 3.89583L7.49827 8.91493C8.05151 9.46817 8.94849 9.46817 9.50173 8.91493L14.5208 3.89583M2.83333 13.4583H14.1667C14.5579 13.4583 14.875 13.1412 14.875 12.75V4.25C14.875 3.8588 14.5579 3.54167 14.1667 3.54167H2.83333C2.44213 3.54167 2.125 3.8588 2.125 4.25V12.75C2.125 13.1412 2.44213 13.4583 2.83333 13.4583Z" stroke="#000807" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
-                        <a href="mailto:em.furukawa@twentythree5.com" style="font-family: 'Poppins',sans-serif;font-weight: 400;font-size: 11px;line-height: 16px;">Zeus@trendytreats.com</a>
+                        <a href="mailto:em.furukawa@twentythree5.com" style="font-family: 'Poppins',sans-serif;font-weight: 350;font-size: 11px;line-height: 16px;">Zeus@trendytreats.com</a>
                     </td>
                 </tr>
                 <tr>
                     <td style="font-family: 'Poppins',sans-serif;
-                                                    font-weight: 400;
+                                                    font-weight: 350;
                                                     font-size: 11px;
                                                     line-height: 16px;
                                                     margin-right:25px;
                                                     display:inline-flex;">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none" style="padding-right:10px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none" style="padding-right:10px; padding-left:5px;">
                             <path d="M14.8746 11.671V13.5904C14.8776 14.3241 14.2179 14.9368 13.4771 14.87C7.08339 14.875 2.12506 9.87062 2.13007 3.51984C2.06335 2.783 2.67301 2.12575 3.4058 2.12506H5.32903C5.64015 2.12201 5.94176 2.23196 6.17766 2.43443C6.84832 3.01006 7.27969 4.96384 7.11372 5.74053C6.98414 6.34692 6.37287 6.77117 5.95728 7.18593C6.86989 8.78771 8.19877 10.114 9.80373 11.0248C10.2193 10.61 10.6444 9.99994 11.252 9.87062C12.0314 9.70472 13.9978 10.1367 14.5711 10.812C14.7744 11.0515 14.8824 11.3572 14.8746 11.671Z" stroke="#000807" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg> 915.227.9547 
                     </td>
