--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </tr>
                 <tr>
                     <td style="display:inline-flex;">
-                        <img src="https://i.imgur.com/keJwWfn.png" width ="17" height ="17px" alt="Mail Icon">
+                        <img src="https://i.imgur.com/keJwWfn.png" width ="17" height ="17px" alt="Mail Icon" style="padding-left:5px; padding-right:10px;">
 <!--CHANGE EMAIL ADDRESS AND HREF HERE-->
                         <a href="mailto:info@trendytreats.com" style="font-family: 'Poppins',sans-serif;font-weight: 350;font-size: 11px;line-height: 16px;">info@trendytreats.com</a>
                     </td>
@@ -38,7 +38,7 @@
                                                     line-height: 16px;
                                                     margin-right:25px;
                                                     display:inline-flex;">
-                        <img src="https://i.imgur.com/akV2Zrg.png" width ="17" height ="17px" alt="Mail Icon"> 
+                        <img src="https://i.imgur.com/akV2Zrg.png" width ="17" height ="17px" alt="Phone Icon" style="padding-left:5px; padding-right:10px;"> 
 <!--CHANGE PHONE NUMBER HERE --> XXX.XXX.XXXX 
                     </td>
                 </tr>
