--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <table style="padding-right:20px;">
                 <tr>
                     <td>
-                        <table style = "border-bottom: 2px solid black; border-color:#1beeee; width:250px;">
+                        <table style = "width:250px; height:47px; border-bottom: 2px solid #1beeee;">
                             <tr>
                                 <td style="font-family:'Poppins',sans-serif; 
                                             font-weight:600;
@@ -45,7 +45,7 @@
             </table>
         </td>
         <td>
-            <table style = "border-left: 2px solid black; border-color:#1beeee;">
+            <table style ="border-left:2px solid #1beeee;">
                     <tr>
                         <td style = "padding-left:20px;">
                             <img src="https://i.imgur.com/W3Vj5OD.png" width ="96px" height ="71px" alt="Trendy Treats Logo">
