Added Info for Jesus

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
                                             font-weight:600;
                                             font-size:20px;
                                             line-height:18px">
-<!--CHANGE NAME HERE-->                     Name Lastname
+<!--CHANGE NAME HERE-->                     Jesus Macias Jr.
                                 </td>
                             </tr>
                             <tr>
                                 <td style="font-family:'Poppins',sans-serif; 
                                             font-weight:400;
                                             font-size:12px;">
-<!-- CHANGE POSITION HERE -->               Position
+<!-- CHANGE POSITION HERE -->               Founder
                                 </td>
                             </tr>
                         </table>
@@ -28,7 +28,7 @@
                     <td style="display:inline-flex;">
                         <img src="https://i.imgur.com/v8Cq2Ra.png" width ="17" height ="17px" alt="Mail Icon" style="padding-left:5px; padding-right:10px;">
 <!--CHANGE EMAIL ADDRESS AND HREF HERE-->
-                        <a href="mailto:info@trendytreats.com" style="font-family: 'Poppins',sans-serif;font-weight: 350;font-size: 11px;line-height: 16px;">info@trendytreats.com</a>
+                        <a href="mailto:Zeus@trendytreats.com" style="font-family: 'Poppins',sans-serif;font-weight: 350;font-size: 11px;line-height: 16px;">Zeus@trendytreats.com</a>
                     </td>
                 </tr>
                 <tr>
@@ -39,7 +39,7 @@
                                                     margin-right:25px;
                                                     display:inline-flex;">
                         <img src="https://i.imgur.com/PtSqD6h.png" width ="17" height ="17px" alt="Phone Icon" style="padding-left:5px; padding-right:10px;"> 
-<!--CHANGE PHONE NUMBER HERE --> XXX.XXX.XXXX 
+<!--CHANGE PHONE NUMBER HERE --> 915.227.9547 
                     </td>
                 </tr>
             </table>
@@ -55,17 +55,17 @@
                         <td style="padding-left:20px;">
                             <span>
                                 <!--INSERT YOUTUBE CHANNEL LINK IN HREF-->
-                                <a href="https://trendytreats.com/" target="_blank" style="display: inline-block;height:25px;width:25px;">
+                                <a href="https://youtube.com/@trendyzeus?feature=shared" target="_blank" style="display: inline-block;height:25px;width:25px;">
                                     <img src="https://i.imgur.com/fLPGujm.png" width="22px" height="22px" alt ="YouTube Button">                                        
                                 </a>&nbsp;&nbsp; </span>
                             <span>
                                 <!--INSERT INSTAGRAM PAGE LINK IN HREF-->
-                                <a href="https://trendytreats.com/" target="_blank" style="display: inline-block;height:25px;width:25px;">
+                                <a href="https://www.instagram.com/trendy_zeus/" target="_blank" style="display: inline-block;height:25px;width:25px;">
                                     <img src="https://i.imgur.com/zIkG6lc.png" width="22px" height="22px" alt ="Instagram Button">                                                 
                                 </a>&nbsp;&nbsp; </span>
                             <span>
                                 <!--INSERT TIKTOK PAGE LINK IN HREF-->
-                                <a href="https://trendytreats.com/" target="_blank" style="display: inline-block;height:25px;width:25px;">
+                                <a href="https://www.tiktok.com/@trendyzeus" target="_blank" style="display: inline-block;height:25px;width:25px;">
                                     <img src="https://i.imgur.com/JRqI3sM.png" width="22px" height="22px" alt ="TikTok Button">                                             
                                 </a>&nbsp;&nbsp; </span>
                         </td>
