Updated info to Em's

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
                                             font-weight:600;
                                             font-size:20px;
                                             line-height:18px">
-<!--CHANGE NAME HERE-->                     Diana Fernandez
+<!--CHANGE NAME HERE-->                     Em Furukawa
                                 </td>
                             </tr>
                             <tr>
                                 <td style="font-family:'Poppins',sans-serif; 
                                             font-weight:400;
                                             font-size:12px;">
-<!-- CHANGE POSITION HERE -->               Executive Assistant
+<!-- CHANGE POSITION HERE -->               Graphic Designer
                                 </td>
                             </tr>
                         </table>
@@ -28,7 +28,7 @@
                     <td style="display:inline-flex;">
                         <img src="https://i.imgur.com/keJwWfn.png" width ="17" height ="17px" alt="Mail Icon" style="padding-left:5px; padding-right:10px;">
 <!--CHANGE EMAIL ADDRESS AND HREF HERE-->
-                        <a href="mailto:Diana@trendytreats.com" style="font-family: 'Poppins',sans-serif;font-weight: 350;font-size: 11px;line-height: 16px;">Diana@trendytreats.com</a>
+                        <a href="mailto:em@trendytreats.com" style="font-family: 'Poppins',sans-serif;font-weight: 350;font-size: 11px;line-height: 16px;">em@trendytreats.com</a>
                     </td>
                 </tr>
                 <tr>
@@ -39,7 +39,7 @@
                                                     margin-right:25px;
                                                     display:inline-flex;">
                         <img src="https://i.imgur.com/akV2Zrg.png" width ="17" height ="17px" alt="Phone Icon" style="padding-left:5px; padding-right:10px;"> 
-<!--CHANGE PHONE NUMBER HERE --> 385.237.9219
+<!--CHANGE PHONE NUMBER HERE --> 919.706.8329
                     </td>
                 </tr>
             </table>
